Fix multiple security and resource management bugs
This commit addresses several critical and high-priority bugs found during codebase investigation:

Security Fixes:
- Fix command injection vulnerability in PythonInterpreter by validating PID and using ProcessBuilder
- Add YARN application ID validation in SparkSubmitInterpreter to prevent command injection

Resource Leak Fixes:
- Fix FileInputStream resource leak in AlluxioInterpreterTest using try-with-resources
- Fix FileOutputStream resource leak in JarHelper using try-with-resources
- Fix BufferedReader resource leak in PythonCondaInterpreter using try-with-resources

Code Quality Improvements:
- Replace printStackTrace() with proper logging in PythonCondaInterpreter
- Add File.delete() return value check in FlinkSqlInterpreterTest
- Add comprehensive bug investigation report in BUGS_INVESTIGATION.md

See BUGS_INVESTIGATION.md for complete details of all bugs found and fixed.